<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "#e6e6e6"
    android:fillViewport="true"
    tools:context=".DoctorForm">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/city"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="City"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/special"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country"
            app:layout_constraintVertical_bias="0.533" />

        <EditText
            android:id="@+id/province"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="Province"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postalCode"
            app:layout_constraintVertical_bias="0.133" />

        <EditText
            android:id="@+id/country"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:layout_marginBottom="96dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="Country"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/special"
            app:layout_constraintEnd_toStartOf="@+id/province"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/postalCode"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="Postal Code"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toEndOf="@+id/addressLine"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/address"
            android:layout_width="245dp"
            android:layout_height="37dp"
            android:layout_marginBottom="200dp"
            android:fontFamily="serif"
            android:text="Address"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/registerDoctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.439" />

        <CheckBox
            android:id="@+id/internalMedicine"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:buttonTint="#1fe0ff"
            android:fontFamily="serif"
            android:text="@string/internal_medicine"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textColorHighlight="#1fe0ff"
            android:textColorLink="#1fe0ff"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/familyMedicine"
            app:layout_constraintEnd_toStartOf="@+id/obstetrics"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/special"
            app:layout_constraintVertical_bias="0.6" />

        <CheckBox
            android:id="@+id/gynecology"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:layout_marginTop="86dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="20dp"
            android:buttonTint="#1fe0ff"
            android:fontFamily="serif"
            android:text="@string/gynecology"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/neurology"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/special"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/neurology"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:buttonTint="#1fe0ff"
            android:fontFamily="serif"
            android:text="@string/neurology"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/registerDoctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/special"
            app:layout_constraintVertical_bias="0.819" />

        <CheckBox
            android:id="@+id/pediatrics"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:buttonTint="#1fe0ff"
            android:fontFamily="serif"
            android:text="@string/pediatrics"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/registerDoctor"
            app:layout_constraintEnd_toStartOf="@+id/neurology"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/special"
            app:layout_constraintVertical_bias="0.825" />

        <CheckBox
            android:id="@+id/obstetrics"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:buttonTint="#1fe0ff"
            android:fontFamily="serif"
            android:text="@string/obstetrics"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/gynecology"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/special"
            app:layout_constraintVertical_bias="0.6" />

        <CheckBox
            android:id="@+id/familyMedicine"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:buttonTint="#1fe0ff"
            android:fontFamily="serif"
            android:text="@string/family_medicine"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/pediatrics"
            app:layout_constraintEnd_toStartOf="@+id/gynecology"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/special"
            app:layout_constraintVertical_bias="0.818" />

        <EditText
            android:id="@+id/employeeNumber"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/employee_number"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.886" />

        <TextView
            android:id="@+id/special"
            android:layout_width="245dp"
            android:layout_height="37dp"
            android:layout_marginBottom="200dp"
            android:fontFamily="serif"
            android:text="@string/specialties"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/registerDoctor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.908" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/address"
            app:layout_constraintEnd_toStartOf="@+id/employeeNumber"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:layout_marginStart="3dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toStartOf="@+id/lastName"
            app:layout_constraintHorizontal_bias="0.295"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <EditText
            android:id="@+id/email"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/employeeNumber"
            app:layout_constraintEnd_toStartOf="@+id/password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.885" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.741" />

        <Button
            android:id="@+id/registerDoctor"
            android:layout_width="145dp"
            android:layout_height="56dp"
            android:layout_marginTop="792dp"
            android:backgroundTint="#1fe0ff"
            android:fontFamily="serif"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            app:icon="@android:drawable/ic_menu_send"
            app:iconTint="#FF000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:layout_marginTop="108dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/employeeNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.932"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/addressLine"
            android:layout_width="174dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="Address Line"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            app:layout_constraintVertical_bias="0.428" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>